Se agrega la libreria del SSD1306 y se recibe letra de cancion desde el UART

--- a/MP3_DFPlayer_PIC18Q.X/nbproject/Makefile-genesis.properties
+++ b/MP3_DFPlayer_PIC18Q.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Sun Feb 04 18:00:50 COT 2024
+#Mon Nov 11 19:14:28 COT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.15\\packs\\Microchip\\PIC18F-Q_DFP\\1.20.405
 default.com-microchip-mplab-mdbcore-AtmelIceScripting-AtmelIceScriptingBase.md5=659f7542ba5bb9824f6dbfb50326e0ec
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.45\\bin
-host.id=1c4t-plfg-c2
-configurations-xml=2c7b567562055a97d899fc3f18df4713
+host.id=h6e9-r1wi-a
+configurations-xml=b0c106b271416dc55925c12a886794be
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
 proj.dir=D\:\\Electronica\\CURSOS\\PIC18F57Q43\\PCBs\\MP3\\MP3_DFPlayer_PIC18Q.X
